public enum AccessibilityIdentifier {
    public enum Feed {
        public static let list = "feed.list"
        public static let searchResults = "search.results"
        public static let settingsButton = "settings.button"
        public static let searchSortMenu = "search.sort.menu"
        public static let searchDateMenu = "search.date.menu"

        public static func category(_ value: String) -> String {
...
        public static let password = "login.password"
        public static let signIn = "login.signIn"
    }

    public enum Comments {
        public static let list = "comments.list"
        public static let nextCommentButton = "comments.nextCommentButton"

        public static let composerCollapsed = "comments.composer.collapsed"
        public static let composerExpanded = "comments.composer.expanded"
        public static let composerEditor = "comments.composer.editor"
        public static let composerCancel = "comments.composer.cancel"
        public static let composerPost = "comments.composer.post"
...
        public static func reply(_ id: Int) -> String {
            "comments.reply.\(id)"
        }
    }

    public enum Browser {
        public static let view = "browser.view"
        public static let fixtureArticle = "browser.fixtureArticle"
        public static let missingFixtureArticle = "browser.fixtureArticle.missing"
        public static let commentsSheetHandle = "browser.commentsSheet.handle"
        public static let collapsedCommentsHeader = "browser.commentsSheet.collapsedHeader"
        public static let expandedCommentsTitle = "browser.commentsSheet.expandedTitle"
    }
}
...
