...
                title: "Unvote",
                image: UIImage(systemName: "arrow.uturn.down"),
                identifier: UIAction.Identifier(rawValue: "unvote")
            ) { _ in voteAction() }

            let share = UIAction(
                title: "Share",
                image: UIImage(systemName: "square.and.arrow.up"),
                identifier: UIAction.Identifier(rawValue: "share.comment")
            ) { [weak self] _ in self?.shareComment(at: indexPath) }

            let copy = UIAction(
                title: "Copy",
                image: UIImage(systemName: "doc.on.doc"),
                identifier: UIAction.Identifier(rawValue: "copy.comment")
            ) { [weak self] _ in self?.copyComment(at: indexPath) }

            let selectText = UIAction(
                title: "Select Text",
...
    }
}

// MARK: - Navigation setup for presented controller
extension CommentsViewController {
    private func setupNavigation() {
        title = "Comments"
        let doneButton = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(dismissSelf))
        navigationItem.leftBarButtonItem = doneButton
    }

    @objc private func dismissSelf() {
        dismiss(animated: true)
...
