...
    platforms: [
        .iOS(.v26)
    ],
    products: [
        .library(name: "Authentication", targets: ["Authentication"]),
        .library(name: "Comments", targets: ["Comments"]),
        .library(name: "Feed", targets: ["Feed"]),
        .library(name: "Settings", targets: ["Settings"]),
        .library(name: "WhatsNew", targets: ["WhatsNew"])
    ],
    dependencies: [
        .package(path: "../Domain"),
        .package(path: "../Shared"),
...
